# qt_project

./: CMakeLists.txt  README.md  main.cpp  makefile  synth_live
audio/: AudioEngine.cpp  AudioEngine.h  AudioEngine_moc.cpp
core/: Filter.cpp  Filter.h  Oscillator.cpp  Oscillator.h  Sound.cpp  Sound.h  SoundInterface.cpp  SoundInterface.h  SoundPreset.cpp  SoundPreset.h
envelopes/: Envelope.cpp  Envelope.h
filters/: BandPassFilter.cpp  BandPassFilter.h  LowPassFilter.cpp  LowPassFilter.h
gui/: SynthesizerWindow.cpp  SynthesizerWindow.h  SynthesizerWindow_moc.cpp
interface/: LiveController.cpp  LiveController.h  SimpleInterface.cpp  SimpleInterface.h
oscillators/: SawOscillator.cpp  SawOscillator.h  SineOscillator.cpp  SineOscillator.h
presets/: PresetLibrary.cpp  PresetLibrary.h  PresetManager.cpp  PresetManager.h
synthesizers/: AdditiveSynthesizer.cpp  AdditiveSynthesizer.h  FMSynthesizer.cpp  FMSynthesizer.h
